--- a/client/index.html
+++ b/client/index.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>RiotGamesChart</title>
 </head>
 <body>
-    <div>
-        <input type="text" id="keyInputBox" placeholder="Riot Games API Key">
-        <button id="searchButton">Search</button>
-        <h1>Status: <span id='status'>idle</span></h1>
-    </div>
+        <h1>Statistics from the official Riot Games API</h1>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js" integrity="sha512-QSkVNOCYLtj73J4hbmVoOV6KVZuMluZlioC+trLpewV8qMjsWqlIQvkn1KGX2StWvPMdWGBqim1xlC8krl1EKQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="./script.js"></script>
+<script src="./script.js" type="module"></script>
 </html>
