--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Statistics from the official Riot Games API</h1>
-    <div id="charts"></div>
+    <header>
+        <h1>Statistics from the official Riot Games API</h1>
+    </header>
+    <main>
+        <div id="col-1"></div>
+        <div id="col-2"></div>
+    </main>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js" integrity="sha512-QSkVNOCYLtj73J4hbmVoOV6KVZuMluZlioC+trLpewV8qMjsWqlIQvkn1KGX2StWvPMdWGBqim1xlC8krl1EKQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="./script.js" type="module"></script>
