--- a/index.html
+++ b/index.html
@@ -12,8 +12,15 @@
         <h1>Statistics from the official Riot Games API</h1>
     </header>
     <main>
-        <div id="col-1"></div>
-        <div id="col-2"></div>
+        <div id="banner">
+            <div id="col-1"></div>
+            <div id="col-2"></div>
+        </div>
+        <div id="detail-charts">
+            <div id="c1"></div>
+            <div id="c2"></div>
+            <div id="c3"></div>
+        </div>
     </main>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js" integrity="sha512-QSkVNOCYLtj73J4hbmVoOV6KVZuMluZlioC+trLpewV8qMjsWqlIQvkn1KGX2StWvPMdWGBqim1xlC8krl1EKQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
