--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             <div id="c2"></div>
             <div id="c3"></div>
         </div>
+        <div id="playtime-charts">
+            <div id="ingame-stats"></div>
+        </div>
     </main>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js" integrity="sha512-QSkVNOCYLtj73J4hbmVoOV6KVZuMluZlioC+trLpewV8qMjsWqlIQvkn1KGX2StWvPMdWGBqim1xlC8krl1EKQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
